compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_label.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "type X { X(a: Int, b: Float) }\nfn x() {\n  let x = X(a: 1, c: 2.0)\n  x\n}"
---
error: Unknown label
  ┌─ /src/one/two.gleam:3:19
  │
3 │   let x = X(a: 1, c: 2.0)
  │                   ^^^^^^ Did you mean `b`?

It accepts these labels:

    b

